--- a/setup.cfg
+++ b/setup.cfg
@@ -5,8 +5,8 @@ description = A benchmarking tool for MFCS (Model Function Calling System)
 long_description = file: README.md
 long_description_content_type = text/markdown
 author = Your Name
-author_email = your.email@example.com
-url = https://github.com/yourusername/mfcs-bench
+author_email = shisdq@gmail.com
+url = https://github.com/mfcsorg/mfcs-bench
 license = MIT
 classifiers =
     Development Status :: 3 - Alpha
