--- a/apps/config.json
+++ b/apps/config.json
@@ -5,22 +5,8 @@
         "args": [
             "apps/mfcs-python/mfcs-python.py",
             "--model=./models/config.json",
-            "--model_name=qwen-plus-latest",
             "--tools=./tools/config.json",
-            "--test_cases=./test_cases",
-            "--test_case_name=test_case_chat.json"
-        ]
-    },
-    "mfcs-js": {
-        "command": "node",
-        "args": [
-            "apps/mfcs-js/example_app.js",
-            "--models=./models/config.json",
-            "--model_name=qwen-plus-latest",
-            "--tools=./tools/config.json",
-            "--tools_index=0",
-            "--test_cases=./test_cases",
-            "--test_case_name=test_case_chat.json"
+            "--test_cases=./test_cases"
         ]
     }
 }
