--- a/models/config.json
+++ b/models/config.json
@@ -2,11 +2,16 @@
     "qwen-plus-latest": {
         "name": "Qwen-Plus",
         "api_base": "https://dashscope.aliyuncs.com/compatible-mode/v1",
-        "api_key": "sk-xxxxx"
+        "api_key": "sk-..."
     },
     "ep-20250209175232-bh9dm": {
         "name": "Doubao1.5-Pro",
         "api_base": "https://ark.cn-beijing.volces.com/api/v3",
-        "api_key": "sk-xxxxx"
+        "api_key": "sk-..."
+    },
+    "gpt-4.1-mini": {
+        "name": "GPT-4.1 mini",
+        "api_base": "https://api.openai.com/v1",
+        "api_key": "sk-..."
     }
 }
